k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
      - name: ecr-secret
      containers:
      - name: frontend
        image: 159749281332.dkr.ecr.ap-southeast-1.amazonaws.com/project-aws-gitops-frontend:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "250m"
          requests:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 5
